Fix misaligned bullet points and numbering

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -679,7 +679,8 @@ table {
 // specialized lists that have their own class.
 .main-content ul:not(.apple-link-list):not(.post-categories):not(.post-footer-categories):not(.nav-list):not(.aux-nav-list) {
   list-style: none;
-  padding-left: 0;
+  padding-left: 0 !important;
+  margin-left: 0 !important;
 
   > li {
     position: relative;
@@ -691,6 +692,7 @@ table {
       content: "";
       position: absolute;
       left: 0.25rem;
+      margin-left: 0;
       top: 0.65em;
       width: 6px;
       height: 6px;
@@ -705,6 +707,41 @@ table {
 
       > li::before { display: none; }
       > li { padding-left: 0; margin: 0.25rem 0; }
+    }
+  }
+}
+
+// --- Article body: ordered list (match UL indent for visual alignment) ---
+.main-content ol:not(.apple-link-list):not(.post-categories):not(.post-footer-categories):not(.nav-list):not(.aux-nav-list) {
+  list-style: none;
+  counter-reset: appleol;
+  padding-left: 0 !important;
+  margin-left: 0 !important;
+
+  > li {
+    position: relative;
+    padding-left: 1.5rem;
+    margin: 0.5rem 0;
+    line-height: 1.55;
+    counter-increment: appleol;
+
+    &::before {
+      content: counter(appleol) ".";
+      position: absolute;
+      left: 0.25rem;
+      top: 0;
+      color: var(--apple-blue);
+      font-weight: 600;
+    }
+
+    ol {
+      counter-reset: appleolnested;
+      margin: 0.375rem 0 0.25rem;
+
+      > li {
+        counter-increment: appleolnested;
+        &::before { content: counter(appleolnested) "."; }
+      }
     }
   }
 }
